<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5.0dip"
            android:layout_marginEnd="5.0dip"
            android:background="@color/black"
            android:backgroundTintMode="multiply"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="5.0dip"
                app:cardBackgroundColor="@color/XTC_grey"
                app:cardCornerRadius="10.0dip">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:id="@+id/btn_bpm_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5.0dip"
                        android:contentDescription="@string/cd_minus_bpm"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:minWidth="32.0dip"
                        android:minHeight="32.0dip"
                        android:src="@mipmap/btn_minus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                    <ImageView
                        android:id="@+id/btn_bpm_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5.0dip"
                        android:contentDescription="@string/cd_add_bpm"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:minWidth="32.0dip"
                        android:minHeight="32.0dip"
                        android:src="@mipmap/btn_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/tv_bpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/ph_bpm"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="28.0sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-25.0px"
                        android:singleLine="true"
                        android:text="@string/bpm"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12.0sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_bpm"
                        app:layout_constraintStart_toStartOf="@+id/tv_bpm"
                        app:layout_constraintTop_toBottomOf="@+id/tv_bpm" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_marginBottom="5.0dip"
                android:foreground="?selectableItemBackgroundBorderless"
                android:onClick="onSigBtnClick"
                app:cardBackgroundColor="@color/XTC_grey"
                app:cardCornerRadius="10.0dip">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:focusable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10.0dip"
                        android:maxWidth="100.0dip"
                        android:singleLine="true"
                        android:text="@string/set_time_sig"
                        android:textColor="@color/text_title"
                        android:textSize="16.0sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_time_sig"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_time_sig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:maxWidth="100.0dip"
                        android:singleLine="true"
                        android:text="@string/ph_time_sig"
                        android:textColor="@color/text_desc"
                        android:textSize="12.0sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_marginBottom="51.0dip"
                android:foreground="?selectableItemBackgroundBorderless"
                android:onClick="test"
                app:cardBackgroundColor="@color/XTC_grey"
                app:cardCornerRadius="10.0dip">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:elevation="10.0dip"
                    android:focusable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10.0dip"
                        android:maxWidth="100.0dip"
                        android:singleLine="true"
                        android:text="@string/beep_sound"
                        android:textColor="@color/text_title"
                        android:textSize="16.0sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_beep_sound"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_beep_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:maxWidth="100.0dip"
                        android:singleLine="true"
                        android:text="@string/ph_beep_sound"
                        android:textColor="@color/text_desc"
                        android:textSize="12.0sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="TextContrastCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginStart="5.0dip"
        android:layout_marginEnd="5.0dip"
        android:layout_marginBottom="6.0dip"
        android:background="@drawable/start_btn_selector"
        android:onClick="onStartBtnClick"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>