<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingStart="5dp"
    android:paddingTop="6dp"
    android:paddingEnd="5dp"
    android:paddingBottom="6dp"
    tools:context=".SigActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sig"
        android:textColor="@color/title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/BeatDur_picker"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:np_dividerColor="#00000000"
        app:np_height="180dp"
        app:np_max="16"
        app:np_min="1"
        app:np_selectedTextColor="#ffffff"
        app:np_selectedTextSize="26dp"
        app:np_textColor="#ffffff"
        app:np_textSize="20dp"
        app:np_value="4"
        app:np_width="64dp" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/BeatAmo_picker"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:np_dividerColor="#00000000"
        app:np_height="180dp"
        app:np_max="16"
        app:np_min="1"
        app:np_selectedTextColor="#ffffff"
        app:np_selectedTextSize="26dp"
        app:np_textColor="#ffffff"
        app:np_textSize="20dp"
        app:np_value="4"
        app:np_width="64dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/divider"
        android:textColor="@color/text_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginStart="5.0dip"
        android:layout_marginEnd="5.0dip"
        android:layout_marginBottom="6.0dip"
        android:background="@drawable/start_btn_selector"
        android:onClick="onTsOkBtnClicked"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>